--- a/tictactoe/src/main/res/values/strings.xml
+++ b/tictactoe/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Weather Project</string>
+    <string name="app_name">B0nggos TicTacToe</string>
 </resources>
